crux-llvm/test-data/golden/abd-test-file-32.cvc5.good
[Crux] Found counterexample for verification goal
[Crux]   test-data/golden/abd-test-file-32.c:11:0: error: in main
[Crux]   crucible_assert
[Crux] 
[Crux]   One of the following 3 fact(s) would entail the goal
[Crux]   * (= x #b00000000000000000000000000000001)
[Crux]   * (= x #b00000000000000000000000000000000)
[Crux]   * (bvult x #b00000000000000000000000001100011)
[Crux] Overall status: Invalid.
